SERVER-43071 Fix the bug in KeyString::toBsonSafeWithDiscriminator which mistakenly invert discriminator byte